---
source: cli/tests/snapshot/main.rs
expression: err
---
warning: plain functions as contracts are deprecated
  ┌─ [INPUTS_PATH]/warnings/naked_contract_parametrized.ncl:6:3
  │
3 │ let C = fun arg label value => value in
  │                 -------------------- this function
  ·
6 │   [1, 2] | Array (C "hi")
  │   ^^^^^^ applied to this term
  │
  = wrap this function using one of the constructors in `std.contract` instead, like `std.contract.from_validator` or `std.contract.custom`

warning: plain functions as contracts are deprecated
  ┌─ [INPUTS_PATH]/warnings/naked_contract_parametrized.ncl:5:3
  │
3 │ let C = fun arg label value => value in
  │                 -------------------- this function
4 │ [
5 │   1 | C "hi",
  │   ^ applied to this term
  │
  = wrap this function using one of the constructors in `std.contract` instead, like `std.contract.from_validator` or `std.contract.custom`
